# verilog-spi

./: .gitignore  Counter.v  Makefile  README.md  TestCounter.cpp  WORKSPACE
gtest-verilog/: BUILD.bazel  ConsoleColour.cpp  ConsoleColour.h  MatchesTrace.cpp  MatchesTrace.h  PortDescription.cpp  PortDescription.h  PortValue.h  Step.cpp  Step.h  TestBench.h  TestBench.test.cpp  Trace.cpp  Trace.h  TraceBuilder.cpp  TraceBuilder.h
gtest-verilog/example/: Counter.gtest-verilog.cpp  Counter.gtest-verilog.h  Counter.test.cpp  main.cpp
gtest-verilog/test/: BUILD.bazel  Counter.gtest-verilog.cpp  Counter.gtest-verilog.h  Counter.test.cpp  MatchesTrace.test.cpp  Step.test.cpp  TestBench.test.cpp  Trace.test.cpp  TraceBuilder.test.cpp
gtestverilog/: BUILD.bazel  defs.bzl  gtestverilog.h
gtestverilog/example/: Counter.test.cpp  Counter.v
gtestverilog/lib/: ConsoleColour.cpp  ConsoleColour.h  MatchesTrace.cpp  MatchesTrace.h  PortDescription.cpp  PortDescription.h  PortValue.h  Step.cpp  Step.h  TestBench.h  Trace.cpp  Trace.h  TraceBuilder.cpp  TraceBuilder.h
gtestverilog/test/: MatchesTrace.test.cpp  Step.test.cpp  TestBench.test.cpp  Trace.test.cpp  TraceBuilder.test.cpp  main.cpp
gtestverilog/tools/: generate_testbench.py
source/: BUILD.bazel  Counter.v  SPIController.v  SPIMaster.v
spi/: BUILD  BUILD.bazel  Helpers.cpp  Helpers.h  SPIController.gtest-verilog.cpp  SPIController.gtest-verilog.h  SPIController.test.cpp  SPIController.v  SPIIntegration.test.cpp  SPIPeripheral.test.cpp  SPIPeripheral.v  SPIPeripheralEcho.v
spi/test/: Helpers.cpp  Helpers.h  SPIController.test.cpp  SPIPeripheral.test.cpp  SPIPeripheralEcho.test.cpp
test/: BUILD.bazel  Counter.gtest-verilog.cpp  Counter.gtest-verilog.h  Counter.test.cpp  CounterGenerated.cpp  CounterGenerated.h  MatchesTrace.cpp  MatchesTrace.h  MatchesTrace.test.cpp  PortDescription.cpp  PortDescription.h  SPIController.gtest-verilog.cpp  SPIController.gtest-verilog.h  SPIController.test.cpp  SPIControllerGenerated.cpp  SPIControllerGenerated.h  SPIControllerPort.h  Step.cpp  Step.h  Step.test.cpp  TestBench.h  TestBench.test.cpp  TestBenchSPIController.h  TestCounter.cpp  TestSPIController.cpp  TestSPIMaster.cpp  TestTraceBuilder.cpp  Trace.cpp  Trace.h  Trace.test.cpp  TraceBuilder.cpp  TraceBuilder.h  TraceBuilder.test.cpp  test.cpp
verilog/: BUILD.bazel  SPIController.v
