load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

verilator_cc_library(
    name = "SPIController",
    srcs = ["SPIController.v"],
)

cc_test(
    name = "test",
    srcs = glob(
        include =[
            "**/*.cpp",
            "**/*.h"
        ]
    ),
    deps = [
        "@com_google_googletest//:gtest",
        "//gtest-verilog:lib",
        ":SPIController",
    ],
)
