load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("//gtestverilog:defs.bzl", "gtest_verilog_testbench")

verilator_cc_library(
    name = "SPIController",
    srcs = ["SPIController.v"],
)

gtest_verilog_testbench(
    name = "SPIControllerTestBench",
    deps = [":SPIController"]
)

cc_test(
    name = "test",
    srcs = glob(
        include =[
            "**/*.cpp",
            "**/*.h"
        ]
    ) + [":SPIControllerTestBench"],
    deps = [
        "@com_google_googletest//:gtest",
        "//gtestverilog:lib",
        ":SPIController",
    ],
)
