cc_test(
    name = "test",
    srcs = glob(
        include =[
            "**/*.cpp",
            "**/*.h"
        ]
    ),
    deps = [
        "@com_google_googletest//:gtest",
        "//gtest-verilog:lib",
        "//source:verilator_counter",
        "//source:verilator_spicontroller",
    ],
)
