load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

verilator_cc_library(
    name = "Counter",
    srcs = ["Counter.v"],
    visibility = ["//visibility:public"],
)

verilator_cc_library(
    name = "SPIController",
    srcs = ["SPIController.v"],
    visibility = ["//visibility:public"],
)