load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")

verilator_cc_library(
    name = "Counter",
    srcs = ["Counter.v"],
)

cc_test(
    name = "test",
    srcs = glob(
        include =[
            "**/*.cpp",
            "**/*.h"
        ]
    ),
    deps = [
        "@com_google_googletest//:gtest",
        "//gtest-verilog:lib",
        ":Counter"
    ],
)
